fix extra whitespace on about

--- a/v2/static/css/style.css
+++ b/v2/static/css/style.css
@@ -96,3 +96,24 @@ border:1px solid #F75C1E;
     border:1px solid white; 
     color:white !important;
 }
+
+.profile-img{
+    border:1px solid black; 
+    border-radius:0.5cm; 
+    width:300px;
+    
+}
+
+.zoom {
+    transition: transform .2s; /* Animation */
+  }
+  
+.zoom:hover {
+transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+border-color:#F75C1E;
+box-shadow:0 0 50px 1px #F75C1E;
+}
+
+@media (hover: hover) and (pointer: fine) {
+
+}
